[package]
name = "luks2"
version = "0.4.0"
authors = ["Max von Forell <max@vonforell.de>"]
license = "MIT"
repository = "https://sr.ht/~mvforell/luks2"
documentation = "https://docs.rs/luks2"
description = "Interact with LUKS2 partitions from Rust"
keywords = ["filesystem", "luks", "cryptography"]
categories = ["filesystem", "cryptography"]
readme = "README.md"
edition = "2018"

[lib]
name = "luks2"
path = "./src/lib.rs"

[dependencies]
aes = "0.6"
base64 = "0.13"
bincode = "1.3"
crossterm = "0.19"
hmac = "0.10"
pbkdf2 = { version = "0.7", default_features = false }
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"
xts-mode = "0.3"

[target.'cfg(windows)'.dev-dependencies]
windows-drives = "0.5"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
nix = "0.20"
