[package]
name = "luks2"
version = "0.5.0"
authors = ["Max von Forell <max@vonforell.de>"]
license = "MIT"
repository = "https://sr.ht/~mvforell/luks2"
documentation = "https://docs.rs/luks2"
description = "Interact with LUKS2 partitions from Rust"
keywords = ["filesystem", "luks", "cryptography"]
categories = ["filesystem", "cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[lib]
name = "luks2"
path = "./src/lib.rs"

[dependencies]
aes = "0.7"
base64 = "0.13"
bincode = { version = "2.0.0-rc.1", default-features = false, features = ["alloc", "derive", "serde"] }
crossterm = "0.19"
hmac = "0.11"
pbkdf2 = { version = "0.8", default_features = false }
rust-argon2 = "0.8"
secrecy = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-big-array = "0.3"
serde_json = { version = "1.0.83", default-features = false, features = ["alloc"] }
sha2 = "0.9"
thiserror-no-std = "2.0.2"
xts-mode = "0.4"
acid_io = { version = "0.1.0", features = ["alloc"] }

[features]
default = ["std"]
std = ["bincode/std", "serde/std", "serde_json/std", "acid_io/std"]

[target.'cfg(windows)'.dev-dependencies]
windows-drives = "0.5"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
nix = "0.20"
