[package]
name = "luks2"
version = "0.5.0"
authors = ["Max von Forell <max@vonforell.de>"]
license = "MIT"
repository = "https://sr.ht/~mvforell/luks2"
documentation = "https://docs.rs/luks2"
description = "Interact with LUKS2 partitions from Rust"
keywords = ["filesystem", "luks", "cryptography"]
categories = ["filesystem", "cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[lib]
name = "luks2"
path = "./src/lib.rs"

[dependencies]
aes = "0.8"
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
bincode = { version = "2.0.0-rc.1", default-features = false, features = ["alloc", "derive"] }
crossterm = { version = "0.19", optional = true }
hmac = "0.12.1"
pbkdf2 = { version = "0.11.0", default_features = false }
argon2 = "0.4.1"
secrecy = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-big-array = "0.3"
serde_json = { version = "1.0.83", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.2", default-features = false }
sha1 = { version = "0.10.1", default-features = false }
thiserror-no-std = "2.0.2"
xts-mode = { version = "0.5", default-features = false }
acid_io = { version = "0.1.0", features = ["alloc"] }

[features]
default = ["std"]
std = ["bincode/std", "serde/std", "serde_json/std", "acid_io/std", "xts-mode/std", "crossterm", "base64/std", "argon2/std"]

[target.'cfg(windows)'.dev-dependencies]
windows-drives = "0.5"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
nix = "0.20"

[patch.crates-io]
xts-mode = { git = "https://github.com/oberien/xts-mode" }
